Stop flicker when clicking tab.

--- a/_stylus/main.styl
+++ b/_stylus/main.styl
@@ -68,3 +68,16 @@ li.tab-li {
   width: 24%;
 }
 }
+@media (min-width: 840px) {
+a.tab-li-a {
+  color: white;
+}
+a.tab-li-a:active {
+  background-color: #091F2F;
+}
+}
+@media (max-width: 839px) {
+a.tab-li-a:active {
+  background-color: white;
+}
+}
